--- a/static/style.css
+++ b/static/style.css
@@ -1,25 +1,145 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+}
+
 body {
-  font-family: monospace;
-  background-color: #CFFFB3;
-  color: #1d1d1d;
-  font-size: 18px;
+  background: #1F1F1F;
 }
 
-.loginbox {
-  padding-left: 5%;
-  padding-right: 5%;
-  border-left: 5px solid #99A1A6;
-  border-radius: 15px;
-  background-color: #CFFFB3;
-  box-shadow:  41px 41px 82px #b0d998,
-             -41px -41px 82px #eeffce;
+
+nav {
+  height: 80px;
+  background: #1F1F1F;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0rem calc((100vw - 1300px) / 2);
 }
 
-a:hover {
-  color: #98ee00;
-  background-color: #354d3f;
-  padding-left: 10px;
+.logo {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-style: italic;
+  padding: 0 2rem;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border: none;
+  color: #FFF;
+  background: #292929;
+  cursor: pointer;
+  border-radius: 0px;
+  box-shadow: 7px 7px 20px #242424;
   -moz-transition: .25s ease-in-out;
   -webkit-transition: .25s ease-in-out;
   transition: .25s ease-in-out;
+}
+
+.cardmarine {
+  background-color: #9291C7;
+}
+
+.cardtomato {
+  background-color: #FE654F;
+}
+
+.hero {
+  background: #1F1F1F;
+  background-image: url('/static/images/delims.svg');
+  background-repeat: repeat;
+  background-size: 25%;
+}
+
+.hero-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 95vh;
+  padding: 3rem calc((100vw - 1300px) / 2);
+}
+
+.column-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: #fff;
+  padding: 0rem 2rem;
+}
+
+.column-left h1 {
+  margin-bottom: 1rem;
+  font-size: 3rem;
+}
+
+.column-right blockquote {
+  border-radius: 10px;
+  border-left: 1rem solid #9291C7;
+  color: #9291C7;
+  background-color: #1F1F1F;
+  opacity: 0.75;
+  width: 90%;
+  margin: 1rem;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
+
+.column-left p {
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+.column-right p {
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+  padding: 1rem 3rem;
+  font-size: 1rem;
+  border: none;
+  color: #FFF;
+  background: #292929;
+  cursor: pointer;
+  border-radius: 50px;
+  -moz-transition: .25s ease-in-out;
+  -webkit-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+a:hover {
+  background: #fff;
+  color: #1F1F1F;
+  -moz-transition: .25s ease-in-out;
+  -webkit-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+.column-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  padding: 0rem 2rem;
+}
+
+.hero-image {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-container {
+    grid-template-columns: 1fr;
+  }
 }
