front-end services update working login

--- a/static/style.css
+++ b/static/style.css
@@ -65,6 +65,10 @@ input {
   background: #9291C7 !important;
 }
 
+.cardbee {
+  background: #E57C04 !important;
+}
+
 .cardtomato {
   background: #FE654F !important;
 }
